kubernetes/apps/base/kopiur-system/repository/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.sstr.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kopia-ui
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kopiur-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.networking.k8s.io/gateway-name: envoy-internal
            k8s:io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: '51515'
              protocol: TCP
